Revert "implement change document category"
This reverts commit f4358cdbfbb28247efa086c0ba5d081cdf0dbba0.