@@ -1,4 +1,4 @@
-package hr.fer.progi.backend.entity;
+package hr.fer.progi.backend.employee;
 
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
@@ -9,26 +9,19 @@ import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static hr.fer.progi.backend.entity.Permission.*;
+import static hr.fer.progi.backend.employee.Permission.*;
 
 @Getter
 @RequiredArgsConstructor
 public enum Role {
 
     EMPLOYEE(Collections.emptySet()),
-    REVISER(Set.of(
-            CHANGE_DOCUMENT_CATEGORY
-    )),
-
-    ACCOUNTANT(Set.of(
-            CHANGE_DOCUMENT_CATEGORY
-    )),
-
+    REVISER(Collections.emptySet()),
+    ACCOUNTANT(Collections.emptySet()),
     DIRECTOR(Set.of(
             ALL_EMPLOYEE_STATISTICS,
             EMPLOYEE_STATISTICS,
-            DELETE_EMPLOYEE_ACCOUNT,
-            CHANGE_DOCUMENT_CATEGORY
+            DELETE_EMPLOYEE_ACCOUNT
     ));
 
     private final Set<Permission> permissions;
